mobile fix for products and overflow

--- a/app/styles/modules/_products-modals.sass
+++ b/app/styles/modules/_products-modals.sass
@@ -8,6 +8,8 @@
 	opacity: 0
 	z-index: -1
 	transition: all 00ms ease-in
+	overflow-y: auto
+	 
 	&-jumbo, &-va
 		background-color: $dark-gray 
 	&-flexkey, &-conv
@@ -26,9 +28,9 @@
 		width: 80%
 		margin-left: 10%
 		position: absolute
-		top: 50%
-		transform: translateY(-50%)
-
+		// top: 50%
+		// transform: translateY(-50%)
+		padding: 40px 0
 		h3
 			color: $white
 			font-size: 22px
@@ -75,7 +77,7 @@
 	&-flexkey
 		.content
 			.list-container
-				.left
+				.left, .right
 					margin-bottom: 17px 
 				h4, p
 					color: $white
@@ -92,13 +94,13 @@
 		left: 4%
 		width: 30px
 		height: 25px
-		position: relative
+		position: fixed
 		margin: 25px auto
 		transform: rotate(0deg)
-		
 		cursor: pointer
 		float: left
 		z-index: 5001
+		
 		span
 			display: block
 			position: absolute
@@ -118,13 +120,13 @@
 		    top: 0px
 		    transform-origin: center
 	.next
-		position: absolute
+		position: fixed
 		top: 45%
 		left: 98%
 		width: 3rem
 		height: 3rem
 	.prev
-		position: absolute
+		position: fixed
 		top: 45%
 		left: 2%
 		width: 3rem
